--- a/app.json
+++ b/app.json
@@ -34,5 +34,6 @@
   ],
   "contextSensitiveHelpUrl": "https://DemoExport2Excel.com/help/",
   "showMyCode": true,
-  "runtime": "4.1"
+  "runtime": "4.1",
+  "target": "Cloud"
 }
